# ray_tracing

./: CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: 2d_raytrace.c.D697EE2A1E335F27.idx  3d_raytrace.c.900DCAD32331EE10.idx  3d_raytrace.h.F5DC5CA8C769EFFA.idx  main.c.71E48E76B5CE5540.idx  threeD.c.51D11645CB739A59.idx  threeD.h.5E556FF5EFC95FAB.idx  twoD.c.894218607B4DEE27.idx  twoD.h.683BBFFD81FED333.idx
include/: twoD.h
src/: main.c  twoD.c
